Fix overflowing for mobile

--- a/src/App.css
+++ b/src/App.css
@@ -102,10 +102,11 @@ canvas {
   margin-right: 1rem;
   text-decoration: none;
 }
+
 .experience-section {
   margin-top: 5rem;
   margin-bottom: 15rem;
-  height: 90vh;
+  min-height: 90vh;
 }
 
 .experience-title {
@@ -131,7 +132,14 @@ canvas {
   font-size: 1.4rem;
 }
 
-@media (max-width: 768px) {
+.skills-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: center;
+}
+
+/* @media (max-width: 768px) {
   .skills-container {
     display: flex;
     flex-direction: column;
@@ -146,4 +154,4 @@ canvas {
     flex-wrap: wrap;
     align-content: center;
   }
-}
+} */
